--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.4
+  firebase_core: ^1.11.0
+  firebase_auth: ^3.3.5
 
 dev_dependencies:
   flutter_test:
