--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.4
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
+  cloud_firestore: ^3.1.6
 
 dev_dependencies:
   flutter_test:
